# cpp-project-structure

./: CMakeLists.txt  init_template.sh  readme.md
cmake/: Findwin_lib.cmake  get_git_version.cmake
example/: example.cpp
include/my_project/: error_code.h  my_project.h
include/project_name/: error_code.h  project_name.h
src/: my_project.cpp  project_name.cpp  version.h.in  win_version_info.rc.in
